[gd_scene load_steps=3 format=2]

[ext_resource path="res://Screens/Gameplay/HUD/Dynamic/SurvivalBar.gd" type="Script" id=1]
[ext_resource path="res://Screens/Gameplay/HUD/Dynamic/BarUnder.svg" type="Texture" id=2]

[node name="SurvivalBar" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = 420.0
margin_top = 290.0
margin_right = 604.0
margin_bottom = 310.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 0.0
texture_under = ExtResource( 2 )

[node name="HBox" type="HBoxContainer" parent="TextureProgress"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Value" type="Label" parent="TextureProgress/HBox"]
margin_top = 3.0
margin_right = 85.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "0"
align = 2
valign = 1

[node name="Slash" type="Label" parent="TextureProgress/HBox"]
margin_left = 89.0
margin_top = 3.0
margin_right = 94.0
margin_bottom = 17.0
size_flags_horizontal = 0
text = "/"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MaxValue" type="Label" parent="TextureProgress/HBox"]
margin_left = 98.0
margin_top = 3.0
margin_right = 184.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "0"
valign = 1

[connection signal="changed" from="TextureProgress" to="." method="_on_TextureProgress_changed"]
[connection signal="value_changed" from="TextureProgress" to="." method="_on_TextureProgress_value_changed"]
